# 6502

6502/: CMakeLists.txt
6502/6502/6502Lib/: CMakeLists.txt
6502/6502/6502Lib/src/public/: m6502.h
6502/6502/6502Test/: CMakeLists.txt
6502/6502/6502Test/src/: main_6502.cpp
